# animacharacter_dev_src

./: .gitignore  .gitmodules  README.md
.tld/: .tld.yaml
docs/: README.it.md  _processed.md  _raw.md  launch_architecture.md  launch_code_ans.md  status_panel_ans.md
examples/: ex_main.cpp
shared_libs/: contents.md
shared_libs/pysafeudp/: main.py
src/: SerialDevice.cpp  SerialDevice.h  build_info.h
src/animacharacter_pyclient/: LICENSE  main.py  pyproject.toml
src/animacharacter_server/: .gitignore  .gitmodules  Dockerfile
src/animacharacter_server/libs/: readme.md
src/animacharacter_server/ros2_ws/: docker_commands.txt
src/firmware/: readme.md
src/firmware/esp32 head controller/: platformio.ini
src/firmware/libs/: readme.md
src/firmware/platformio_project/: esp32 head controller.code-workspace  platformio.ini  platformio_project.code-workspace
src/robot-sim3D/: eyebox_assembly.tscn  icon.svg.import  id_mapping.csv  id_mapping.csv.import  lids_manager_joint.gd  lids_manager_joint.gd.uid  node_3d.gd.uid  node_3d.tscn  node_3d.tscn947702064.tmp  project.godot  pyclient.md  remote_joint.gd  remote_joint.gd.uid  sim.tscn  sim.tscn18511598999.tmp  udp_server.gd  udp_server.gd.uid  udpserver.tscn  utils.gd  utils.gd.uid
src/robot-sim3D/imports/: arm.glb  arm.glb.import  body.glb  body.glb.import  head.glb.import  head_Image.png.import  head_frame.glb.import  head_frame_Image.jpg.import  head_frame_eyeiris.jpg.import
src/robot-sim3D/meshes/: avambraccio.tscn  body.tscn  braccio.tscn  eye.tscn  eyelid_down.tscn  (+3 more)
src/shared_libs/: contents.md
src/shared_libs/authmsg/: pyproject.toml
src/shared_libs/authmsg/src/authmsg/: __init__.py  udp_endpoint.py
src/shared_libs/authmsg/src/authmsg/core/: exceptions.py  peer.py  tcp_peer.py  udp_peer.py
src/shared_libs/authmsg/src/authmsg/protocol/: crypto.py  exceptions.py  protocol.py  wire_protocol.py
src/shared_libs/authmsg/tests/: test_peer_tcp.py  test_peer_udp.py  test_udp_endpoint.py
src/shared_libs/packetcodec/: pyproject.toml
src/shared_libs/packetcodec/examples/: sender_receiver.py
src/shared_libs/packetcodec/src/packetcodec/: __init__.py  builtin_packets.py  constants.py  packet_decoder.py  utils.py
src/shared_libs/pysafeudp/: pyproject.toml
src/shared_libs/pysafeudp/src/pysafeudp/: __init__.py  safeudpsock.py
src/shared_libs/pysafeudp/tests/: B_session.json  testA.py  testB.py
src/timer/: timer.h
(+77 files in other folders)
