[project]
name = "authmsg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Americo", email = "americo.cherubini2003@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pynng>=0.9.0",
]

[project.scripts]
authmsg = "authmsg:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
