[project]
name = "packetcodec"
version = "0.1.0"
description = "Simple packet encoding / decoding framework between python objects <-> bytes"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = []

[project.scripts]
packetcodec = "packetcodec:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
