[project]
name = "pysafeudp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.1.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
pysafeudp = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pysafeudp",
]
